# people-counter

./: .gitignore  README.md  annotate_training_dataset.py  aws_commands.txt  create_env.sh  data_external.yaml  demo_gif_creator.py  env-from-history.yml  env.yml  env_create.sh  env_full.yml  environment.yml  pyproject.toml  requirements.txt  scratch_notebook.ipynb  update_env.sh  upload_s3.py  web_cam_people_counter.ipynb
dataset/: data.yaml
datasets/dataset_external/: data_external.yaml
datasets/dataset_external/labels/: train.cache  val.cache
datasets/dataset_webcam/: data_webcam.yaml
demo/: compare_models.py  demo_gif_creator.py
finetune/Stage_1_yolo11n_external_finetune_2025_03_11_14_53/: args.yaml  results.csv
finetune/best_webcam_finetune_2025_03_11_17_43/: args.yaml  results.csv
finetune/yolo11l_external_finetune/: args.yaml  results.csv
finetune/yolo11l_webcam_finetune/: args.yaml  results.csv
finetune/yolo11n_external_finetune3/: args.yaml  results.csv
finetune/yolov8n_external_finetune/: args.yaml
finetune/yolov8n_external_finetune2/: args.yaml
finetune/yolov8n_external_finetune3/: args.yaml  results.csv
src/: aws_download_train_upload.py  capture_finetune_training_images.py  capture_finetuning_images.py  create_val_test_webcam.py  download_s3.py  finetune_model_training.py  manual_train_annotation.py  test_assess.py  test_train_split_labeled_data.py  update_label_id.py  upload_s3.py  web_cam_people_counter.ipynb
src/config/: .env  config.py
src/models/: yolov8n.pt:Zone.Identifier
src/utils/: test_train_split_labeled_data.py
(+208 files in other folders)
